Resolves: fdo#67554 avoid ooxml import crash

check if the endrange is empty before dereferencing

while I'm at it, don't copy the entire vector and make it a little more
readable

Change-Id: I1f2a0096791ca0ef51aad595f71e1a18aa448c3b
(cherry picked from commit ce791697cbf260b592f7cad095539a414888823f)
Reviewed-on: https://gerrit.libreoffice.org/5435
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>